<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0000ff"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/updateTitle"
            android:textColor="#fff"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:padding="10dp"
            android:text="@string/updateInfo"
            android:textColor="#fff"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btn_into"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/circle_shape"
            android:text="@string/know"
            android:textColor="#fff"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>
